--- a/stack/package.json
+++ b/stack/package.json
@@ -8,17 +8,18 @@
     "dev-debug": "DEBUG=stack:* npm run dev"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "luxon": "^1.25.0",
     "mongoose": "^5.10.13",
     "morgan": "~1.9.1",
     "pug": "^3.0.0"
   },
   "devDependencies": {
-    "async": "^3.2.0",
     "nodemon": "^2.0.6"
   }
 }
