--- a/stack/package.json
+++ b/stack/package.json
@@ -1,6 +1,9 @@
 {
   "name": "stack",
   "version": "0.0.0",
+  "engines": {
+    "node": "^14.5.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -9,11 +12,12 @@
   },
   "dependencies": {
     "async": "^3.2.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
+    "debug": "^2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.6.1",
+    "helmet": "^4.2.0",
     "http-errors": "~1.6.3",
     "luxon": "^1.25.0",
     "mongoose": "^5.10.13",
@@ -21,6 +25,7 @@
     "pug": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "dotenv": "^8.2.0"
   }
 }
